update docs due to syntax changes

--- a/content/en-docs/getting-started/introduction.mdx
+++ b/content/en-docs/getting-started/introduction.mdx
@@ -29,7 +29,7 @@ Here's a glimpse of what Cyrus code looks like:
 import std::io;
 
 fn main() {
-  #msg: char* = "Hello, Cyrus!";
+  var msg: char* = "Hello, Cyrus!";
   io::printfn(msg);
 }
 ```
