--- a/content/en-docs/tutorial/enums.mdx
+++ b/content/en-docs/tutorial/enums.mdx
@@ -30,9 +30,9 @@ enum Color {
 You construct enum values by qualifying them with the enum's name:
 
 ```cyrus
-#variant = Color.Red;
-#variant = Color.Valued;
-#variant = Color.Custom(1, 2, 3);
+var variant = Color.Red;
+var variant = Color.Valued;
+var variant = Color.Custom(1, 2, 3);
 ```
 
 <br />
