--- a/content/en-docs/getting-started/hello-world.mdx
+++ b/content/en-docs/getting-started/hello-world.mdx
@@ -19,12 +19,12 @@ fn main() {
 
 ## Compiling the program
 
-Let's take the above program and put it in a file called **hello_world.cyr**.
+Let's take the above program and put it in a file called **hello_world.cyrus**.
 
 We can then run it with:
 
 ```bash
-cyrus run hello_world.cyr
+cyrus run hello_world.cyrus
 ```
 
 It should print Hello, World! and return back to the command line prompt.
