--- a/content/en-docs/tutorial/expressions.mdx
+++ b/content/en-docs/tutorial/expressions.mdx
@@ -483,11 +483,11 @@ It evaluates operands from left to right and returns the first pointer that is n
 If all operands are null, the result is null.
 
 ```cyrus
-#p1: int* = null;
-#p2: int* = &x;
-#p3: int* = &y;
+var p1: int* = null;
+var p2: int* = &x;
+var p3: int* = &y;
 
-#result1 = p1 || p2;        // returns p2
-#result2 = p1 || null;      // returns null
-#result3 = p1 || p2 || p3;  // returns p2 (first non-null)
+var result1 = p1 || p2;        // returns p2
+var result2 = p1 || null;      // returns null
+var result3 = p1 || p2 || p3;  // returns p2 (first non-null)
 ```
