--- a/content/en-docs/tutorial/unions.mdx
+++ b/content/en-docs/tutorial/unions.mdx
@@ -35,7 +35,7 @@ union DataUnion {
 }
 
 fn main() {
-    #un = DataUnion;
+    var un = DataUnion;
     un.b = 3.14;
 }
 ```
@@ -48,7 +48,7 @@ You can create a union instance and assign fields directly:
 
 ```cyrus
 fn main() {
-    #un = DataUnion;
+    var un = DataUnion;
     un.a = 42;       // set the integer field
     un.b = 3.14;     // overwrites the same memory with a float
 }
@@ -63,7 +63,7 @@ After un.b = 3.14, the value of un.a is no longer valid.
 Unions can be initialized using a Union Initializer, specifying which field to set at creation:
 
 ```cyrus
-#un: DataUnion = DataUnion { a: 10 };
+var un: DataUnion = DataUnion { a: 10 };
 ```
 
 Rules:
@@ -92,7 +92,7 @@ union IntBytes {
 }
 
 fn main() {
-    #data = IntBytes { value: 0x12345678 };
+    var data = IntBytes { value: 0x12345678 };
 
     printf("%x %x %x %x\n", data.bytes[0], data.bytes[1], data.bytes[2], data.bytes[3]);
 }
