--- a/content/en-docs/tutorial/types.mdx
+++ b/content/en-docs/tutorial/types.mdx
@@ -20,7 +20,7 @@ var b: int64 = a; // Implicit cast from int32 to int64
 
 - `int32` (32-bit signed integer) can always fit into `int64` (64-bit signed integer).  
 - The compiler handles this **implicitly**, so no special syntax is required.  
-- Safe casts also apply to numeric literals, e.g., `#x: float64 = 10.0` is allowed.
+- Safe casts also apply to numeric literals, e.g., `var x: float64 = 10.0` is allowed.
 
 <br />
 
