--- a/content/en-docs/getting-started/install-compiler-binary.mdx
+++ b/content/en-docs/getting-started/install-compiler-binary.mdx
@@ -38,7 +38,7 @@ cp -r ./stdlib ~/.cyrus_stdlib
 Then export the path in your shell config (~/.bashrc, ~/.zshrc, etc.):
 
 ```bash
-export CYRUS_STDLIB=~/.cyrus_stdlib
+export CYRUS_STDLIB_PATH=~/.cyrus_stdlib
 ```
 
 Apply the changes:
