docs: improved functions.mdx

--- a/content/en-docs/tutorial/functions.mdx
+++ b/content/en-docs/tutorial/functions.mdx
@@ -319,7 +319,7 @@ pub fn main() {
 ### No Environment Capture
 
 In Cyrus, **lambdas are not closures**.
-That means they cannot capture variables from their surrounding scope. For example:
+That means they do not capture variables from their surrounding scope. For example:
 
 ```cyrus
 fn main() {
