--- a/content/en-docs/tutorial/basic-syntax.mdx
+++ b/content/en-docs/tutorial/basic-syntax.mdx
@@ -86,12 +86,12 @@ when an unknown printer took a galley of type and scrambled it to make a type sp
 Cyrus supports Unicode characters directly in string and character literals. You can type emojis, accented letters, or any other Unicode characters inside quotes:
 
 ```cyrus
-var letter: char = 'A';                     // ✅ Works
-var smile: char* = "😇";                    // ✅ Works in a string
-var rocket: string = "Let's go! \u{1F680}"; // ✅ Works, 🚀
-var greek_alpha: char* = "\u03B1";          // ✅ Works, α
-var emoji_char: char = '😇';                // ❌ Does NOT work
-var multibyte_char: char = '\u263A';        // ❌ Does NOT work
+var letter: char = 'A';                     // valid
+var smile: char* = "😇";                    // valid
+var rocket: string = "Let's go! \u{1F680}"; // valid "Let's go! 🚀"
+var greek_alpha: char* = "\u03B1";          // valid "α"
+var emoji_char: char = '😇';                // NOT VALID
+var multibyte_char: char = '\u263A';        // NOT VALID
 ```
 
 <br />
@@ -115,7 +115,7 @@ var b = 0x42EDAA02;
 - Binary (Base 2, prefix with 0b or 0B):
 
 ```cyrus
-var c = 0x42EDAA02;
+var c = 0b101010;
 ```
 
 Numeric literals may include underscores **\_** between digits for readability; these are ignored by the compiler:
@@ -138,7 +138,8 @@ Valid integer suffixes include:
 
 - uintptr
 - intptr
-- size_t
+- usize
+- isize
 - int
 - int8
 - int16
@@ -170,7 +171,7 @@ var b = 3.14float64;
 
 ### Default Type of Literals
 
-If you don't specify a type suffix, Cyrus assigns **int** as the default type for integer literals, and **float64** as the default type for floating-point literals.
+If you don't specify a type suffix, Cyrus assigns `int` as the default type for integer literals, and `float64` as the default type for floating-point literals.
 
 Type suffixes can be used to explicitly control the size and signedness of an integer literal, or to select a different floating-point precision.
 
@@ -179,10 +180,6 @@ Type suffixes can be used to explicitly control the size and signedness of an in
 ## Arrays
 
 Arrays in Cyrus are fixed-size sequences of elements. Their size must be known at compile time, similar to C arrays.
-
-```cyrus
-var name = Type[capacity]{element1, element2, ..., elementN};
-```
 
 Example:
 
@@ -220,10 +217,4 @@ var b: int* = &a;
 printf("%d\n", *b); // prints 10
 ```
 
-Pointer arithmetic behaves like C (e.g., incrementing a pointer moves it by sizeof(Type) bytes).
-
-<br />
-
-## Vectors
-
-Coming soon...
+Pointer arithmetic behaves like C (e.g., incrementing a pointer moves it by sizeof(T) bytes).
